# qeech

./: README.md
api/: .env.example
api/qeech_data/adapters/api/handlers/: get_recipe_recommendations.py
api/qeech_data/adapters/cli/: cli.py
api/qeech_data/adapters/cli/commands/: recommend_recipes.py
api/qeech_data/application/services/: create_recipes_graph.py  habits_score.py  ingredients_score.py  season_score.py
api/qeech_data/core/database/: database.py
api/qeech_data/core/repositories/: interaction.py
api/qeech_data/core/utils/: load_data.py
app/: .gitignore  App.tsx  app.json  go.mod  package-lock.json  package.json
app/src/navigation/: index.tsx
app/src/screens/: home.tsx  login.tsx  recipe.tsx
app/src/stores/: auth-store.ts
app/src/utils/: api.ts
data/: .gitignore  pyproject.toml
data/qeech_data/: download_data.py  load_data.py
data/qeech_data/adapters/api/: api.py
data/qeech_data/adapters/api/handlers/: get_recipe.py  get_recipe_image.py  login.py
data/qeech_data/adapters/api/utils/: auth.py
data/qeech_data/adapters/cli/commands/: recommend_recipes.py
data/qeech_data/application/services/: create_recipes_graph.py  diet_score.py  global_score.py  habits_score.py  ingredients_score.py  season_score.py
data/qeech_data/application/usecases/: recommend_recipes.py
data/qeech_data/core/database/: database.py
data/qeech_data/core/entities/: ingredient.py  interaction.py  recipe.py  user.py
data/qeech_data/core/logger/: logger.py
data/qeech_data/core/repositories/: ingredient.py  recipe.py  user.py
data/qeech_data/core/utils/: load_data.py  nx_knn.py
docs/: README-fr.md
docs/presentation/: package-lock.json  slides.md
