[tool.poetry]
name = "qeech-data"
version = "0.1.0"
description = ""
authors = ["Arthur Fontaine <0arthur.fontaine@gmail.com>", "Alexandre Grodent <alexandregrodent@gmail.com"]
readme = "README.md"
packages = [{include = "qeech_data"}]

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.5.16"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
qeech = "qeech_data.adapters.cli.cli:main"
load-data = "qeech_data.load_data:load_data"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
